<resources>
    <string name="app_name">DatabaseSample</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="display">Display</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>