<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_display"
        android:text="@string/display"
        android:gravity="center"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:text="@string/add"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/et_border_rounded_green"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_display"
        android:text="@string/display"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/et_border_rounded_green"
        android:layout_marginBottom="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete"
        android:text="@string/delete"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/et_border_rounded_green"
        android:layout_marginBottom="190dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update"
        android:text="@string/update"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/et_border_rounded_green"
        android:layout_marginBottom="260dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_key"
            android:text="@string/name"
            android:textColor="@color/black"
            android:focusable="false"
            android:clickable="false"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_value"
            android:gravity="center"
            android:hint="@string/name"
            android:textColor="@color/colorPrimary"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="270dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_key2"
            android:text="@string/age"
            android:textColor="@color/black"
            android:focusable="false"
            android:clickable="false"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_value2"
            android:gravity="center"
            android:hint="@string/age"
            android:textColor="@color/colorPrimary"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>